--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
             main.print-area > * {
                 margin: 0 0 0.4rem 0 !important;
             }
-            #print-header-placeholder, #print-footer-placeholder {
+            #print-header-placeholder {
                 display: block !important;
             }
-            .print-area section {
+            .print-area section, .print-area footer {
                 padding: 0.4rem !important;
                 box-shadow: none !important;
                 border: 1px solid #ccc;
                 break-inside: avoid;
+            }
+            .print-area footer {
+                border: none !important;
             }
             .print-area h2 { font-size: 11pt; margin-bottom: 0.25rem; padding-bottom: 0.25rem; }
             .print-area h3 { font-size: 10pt; }
