--- a/index.html
+++ b/index.html
@@ -371,21 +371,25 @@
         </div>
     </div>
 
-    <div id="signature-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden z-50">
-        <div class="bg-white rounded-lg shadow-xl p-6 w-full max-w-lg flex flex-col" style="height: 80vh; max-height: 500px;">
-            <h3 class="text-lg font-bold mb-4">Desenhe a Assinatura</h3>
-            <div class="flex-grow w-full">
-                <canvas id="signature-pad" class="w-full h-full"></canvas>
-            </div>
-            <div class="mt-4 flex justify-between">
-                <button id="close-signature" class="bg-gray-200 text-gray-800 font-bold py-2 px-4 rounded-lg hover:bg-gray-300">Cancelar</button>
-                <div>
-                    <button id="clear-signature" class="bg-gray-300 text-gray-800 font-bold py-2 px-4 rounded-lg hover:bg-gray-400">Limpar</button>
-                    <button id="save-signature" class="bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700">Salvar</button>
-                </div>
+   <div id="signature-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden z-50">
+    <div class="bg-white rounded-lg shadow-xl p-6 w-full max-w-lg flex flex-col" style="height: 80vh; max-height: 500px;">
+        <h3 class="text-lg font-bold mb-4 text-center">
+            Desenhe a Assinatura 
+            <span class="text-red-600 font-bold">(Vire a tela na horizontal)</span>
+        </h3>
+        <div class="flex-grow w-full">
+            <canvas id="signature-pad" class="w-full h-full"></canvas>
+        </div>
+        <div class="mt-4 flex justify-between">
+            <button id="close-signature" class="bg-gray-200 text-gray-800 font-bold py-2 px-4 rounded-lg hover:bg-gray-300">Cancelar</button>
+            <div>
+                <button id="clear-signature" class="bg-gray-300 text-gray-800 font-bold py-2 px-4 rounded-lg hover:bg-gray-400">Limpar</button>
+                <button id="save-signature" class="bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700">Salvar</button>
             </div>
         </div>
     </div>
+</div>
+
 
     <script>
         let signaturePad;
