--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ function makeDraggable() {
 
                     const stopDrag = () => {
                         isDragging = false;
-                        signature.style.cursor = 'move';
+                        signature.style.cursor = 'move';Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:Proprietário/possuidor:
                     };
 
                     signature.addEventListener('mousedown', startDrag);
