--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@ textarea,
                 font-weight: bold;
                 margin-top: 0.25rem;
             }
+			#cidade-print {
+        text-transform: uppercase;
+    }
         }
     </style>
 </head>
@@ -701,3 +704,4 @@ textarea,
     </script>
 </body>
 </html>
+
