--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ textarea,
                         <p>E-mail: gaecoitajai@mpsc.mp.br</p>
                     </div>
                     <div class="flex items-center space-x-2">
-                        <img src="imagem/gaeco2.bmp" alt="Logos" class="h-10">
+                        <img src="imagem/logos.png" alt="Logos" class="h-10">
                     </div>
                 </div>
             </footer>
@@ -763,3 +763,4 @@ textarea,
     </script>
 </body>
 </html>
+
